--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
     <main>
+        <div class="card">
+            <div class="card-body text-center">
+              Weather Dashboard
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Search for a City:</h5>
+              <div class="row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="San Diego" aria-label="First name">
+                  <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="button">Search</button>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="script.js"></script>
