readjusted ajax and functions for weather data

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <p class="my-4">5 Day Forecast</p>
   </th>
   <tbody id="repo-table" class="mx-auto text-center">
-    <th>Day</th>
-    <th>Temp</th>
-    <th>Wind</th>
-    <th>Humidity</th>
+    <!-- <th id="five-day-day">Day</th> -->
+    <th id="five-day-temp">Temp</th>
+    <th id="five-day-wind">Wind</th>
+    <th id="five-day-humidity">Humidity</th>
   </tbody>
 </table>
     <!-- <div class="row">
