added storage and previous city button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
       </div>
     </div>
+    <ul id="button-section"></ul>
 <!--current days weather-->
     <div class="card">
       <div class="card-body">
