--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
   <main>
-    <div class="card">
+    <div class="card" id="title-card">
       <div class="card-body text-center">
         Weather Dashboard
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
+    <div class="card" style="width: 18rem;" id="search-card">
+      <div class="card-body" >
         <h5 class="card-title">Search for a City:</h5>
         <div class="row">
           <div class="col">
@@ -33,28 +33,30 @@
           </div>
         </div>
       </div>
+      <ul id="button-section"></ul>
     </div>
-    <ul id="button-section"></ul>
 <!--current days weather-->
-    <div class="card">
-      <div class="card-body">
+    <div class="card" >
+      <div class="card-body" id="main-weather">
         <h5 class="card-title" id="city-name"></h5>
         <img id="icon-space" src="#"/>
         <h6 class="card-subtitle mb-2 text-muted" id="date"></h6>
-        <ul class="list-group list-group-flush">
+        <ul class="list-group list-group-flush" id="citiesList">
           <li class="list-group-item" id="temp"></li>
           <li class="list-group-item" id="wind"></li>
           <li class="list-group-item" id="humidity"></li>
         </ul>
       </div>
     </div>
-
+<!-- 5 day forecast -->
+<div id="five-days">
     <h3 class="text-center">5 Day Forecast</h3>
     <div class="row">
       <div class="col">
         <div class="card">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted" id="date1"></h6>
+            <img id="icon-space1" src="#"/>
             <ul class="list-group list-group-flush">
               <li class="list-group-item" id="temp1"></li>
               <li class="list-group-item" id="wind1"></li>
@@ -67,8 +69,8 @@
       <div class="col">
         <div class="card">
           <div class="card-body">
-
             <h6 class="card-subtitle mb-2 text-muted" id="date2"></h6>
+            <img id="icon-space2" src="#"/>
             <ul class="list-group list-group-flush">
               <li class="list-group-item" id="temp2"></li>
               <li class="list-group-item" id="wind2"></li>
@@ -81,8 +83,8 @@
       <div class="col">
         <div class="card">
           <div class="card-body">
-
             <h6 class="card-subtitle mb-2 text-muted" id="date3"></h6>
+            <img id="icon-space3" src="#"/>
             <ul class="list-group list-group-flush">
               <li class="list-group-item" id="temp3"></li>
               <li class="list-group-item" id="wind3"></li>
@@ -95,8 +97,8 @@
       <div class="col">
         <div class="card">
           <div class="card-body">
-
             <h6 class="card-subtitle mb-2 text-muted" id="date4"></h6>
+            <img id="icon-space4" src="#"/>
             <ul class="list-group list-group-flush">
               <li class="list-group-item" id="temp4"></li>
               <li class="list-group-item" id="wind4"></li>
@@ -111,6 +113,7 @@
         <div class="card">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted" id="date5"></h6>
+            <img id="icon-space5" src="#"/>
             <ul class="list-group list-group-flush">
               <li class="list-group-item" id="temp5"></li>
               <li class="list-group-item" id="wind5"></li>
@@ -120,6 +123,7 @@
         </div>
       </div>
     </div>
+  </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
